--- a/public/style.css
+++ b/public/style.css
@@ -133,8 +133,36 @@ span.links i {
 #about-card {
     position: absolute;
     display: block;
-    background-color: azure;
+    background-color: lightgray;
+    color: black;
     padding: 10px;
     width: 100%;
     z-index: 2;
+    height: 100vh;
 }
+
+#about-card h1 {
+    color: red;
+}
+
+#about-card div.row {
+    opacity: 0;
+}
+
+.progress {
+    margin: 5px;
+    font-size: 1em;
+    height: 30px;
+    width: 100%;
+}
+
+.progress-bar {
+    padding-left: 5px;
+    text-align: left;
+}
+
+img.profile-photo {
+    margin: 3px;
+}
+
+
