--- a/public/style.css
+++ b/public/style.css
@@ -2,70 +2,6 @@ body {
     margin: 0;
     font-family: Arial, Helvetica, sans-serif;
 }
-  
-/* The sidebar menu */
-.sidebar {
-    height: 100%; /* 100% Full-height */
-    width: 0; /* 0 width - change this with JavaScript */
-    position: fixed; /* Stay in place */
-    z-index: 1; /* Stay on top */
-    top: 0;
-    left: 0;
-    background-color: #111; /* Black*/
-    overflow-x: hidden; /* Disable horizontal scroll */
-    padding-top: 60px; /* Place content 60px from the top */
-    transition: 0.5s; /* 0.5 second transition effect to slide in the sidebar */
-}
-  
-  /* The sidebar links */
-.sidebar a {
-    padding: 8px 8px 8px 32px;
-    text-decoration: none;
-    font-size: 25px;
-    color: #818181;
-    display: block;
-    transition: 0.3s;
-}
-  
-  /* When you mouse over the navigation links, change their color */
-.sidebar a:hover {
-    color: #f1f1f1;
-}
-  
-  /* Position and style the close button (top right corner) */
-.sidebar .closebtn {
-    position: absolute;
-    top: 0;
-    right: 25px;
-    font-size: 36px;
-    margin-left: 50px;
-}
-  
-  /* The button used to open the sidebar */
-.openbtn {
-    font-size: 20px;
-    cursor: pointer;
-    background-color: #111;
-    color: white;
-    padding: 10px 15px;
-    border: none;
-}
-  
-.openbtn:hover {
-    background-color: #444;
-}
-  
-  /* Style page content - use this if you want to push the page content to the right when you open the side navigation */
-#main {
-    /* transition: margin-left .5s;  */
-    /* padding: 20px; */
-}
-  
-  /* On smaller screens, where height is less than 450px, change the style of the sidenav (less padding and a smaller font size) */
-@media screen and (max-height: 450px) {
-    .sidebar {padding-top: 15px;}
-    .sidebar a {font-size: 18px;}
-}
 
 div.content {
     /* margin-left: 20%; */
@@ -86,11 +22,12 @@ div.underline {
 }
 
 .title-card {
-    background-color: rgb(0,0,0); /* Fallback color */
-    background-color: rgba(0,0,0, 0.4); /* Black w/opacity/see-through */
+    /* background-color: rgb(0,0,0); Fallback color */
+    /* background-color: rgba(0,0,0, 0.4); Black w/opacity/see-through */
     color: white;
     font-weight: bold;
-    border: 3px solid #f1f1f1;
+    
+    /* border: 3px solid #f1f1f1; */
     position: absolute;
     top: 50%;
     left: 50%;
@@ -135,7 +72,7 @@ span.links i {
     display: block;
     background-color: lightgray;
     color: black;
-    padding: 10px;
+    /* padding: 10px; */
     width: 100%;
     z-index: 2;
     height: 100vh;
@@ -165,4 +102,56 @@ img.profile-photo {
     margin: 3px;
 }
 
+.wrapper {
+    /* width: 100%; */
+    z-index: 3;
+    display: grid;
+    /* grid-gap: 10px; */
+    grid-template-columns: repeat(5, [col] 20% ) ;
+    grid-template-rows: repeat(5, [row] auto );
+    background-color: #fff;
+    color: #444;
+    /* padding: 10px; */
+}
+
+.wrapper div {
+    z-index: 4;
+}
+
+.box {
+    width: 100%;
+    background-color: #444;
+    color: #fff;
+    /* border-radius: 5px; */
+    padding: 20px;
+    font-size: 150%;
+    z-index: 3;
+}
+
+.a {
+    grid-column: col / span 1;
+    grid-row: row;
+}
+.b {
+    grid-column: col 2 / span 4;
+    grid-row: row;
+}
+.c {
+    grid-column: col;
+    grid-row: row 2;
+}
+.d {
+    grid-column: col 2 / span 4;
+    grid-row: row 2;
+}
+
+.e {
+    grid-column: col;
+    grid-row: row 3;
+}
+
+.f {
+    grid-column: col 2 / span 4;
+    grid-row: row 3;
+}
 
