--- a/public/style.css
+++ b/public/style.css
@@ -50,7 +50,7 @@ div.underline {
     z-index: 1;
   
     display: block;
-    /* background-image: url("https://image.freepik.com/free-photo/mountain-landscape-skyline_1388-166.jpg"); */
+    background-image: url("https://www.freepik.com/free-photo/mountains-nature-landscape_1253947.htm");
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;  
