--- a/public/style.css
+++ b/public/style.css
@@ -22,9 +22,9 @@ div.underline {
 }
 
 .title-card {
-    /* background-color: rgb(0,0,0); Fallback color */
-    /* background-color: rgba(0,0,0, 0.4); Black w/opacity/see-through */
-    color: white;
+    /* background-color: rgb(0,0,0); */
+    background-color: rgba(0, 0, 0, 0.4);
+    /* color: white; */
     font-weight: bold;
     
     /* border: 3px solid #f1f1f1; */
@@ -39,7 +39,7 @@ div.underline {
 }
 
 .title-card h1, .title-card h2, .title-card  h3 {
-    color: #000000;
+    color: #ffffff;
     margin: auto;
 }
 
@@ -50,7 +50,7 @@ div.underline {
     z-index: 1;
   
     display: block;
-    background-image: url("https://www.freepik.com/free-photo/mountains-nature-landscape_1253947.htm");
+    background-image: url("/landing-image.jpg");
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;  
@@ -107,6 +107,43 @@ img.profile-photo {
     margin: 3px;
 }
 
+.skillsrow {
+    display: grid;
+    grid-template-columns: repeat(4, [col] 25% ) ;
+    grid-template-rows: repeat(1, [row] auto );
+}
+
+.skillsrow h5 {
+    padding: 0px;
+    margin: 0px;
+}
+
+.languages {
+    grid-column: col / span 1;
+    grid-row: row 1;
+    text-align: center;
+}
+
+.skills {
+    grid-column: col 2 / span 1;
+    grid-row: row 1;
+    text-align: center;
+}
+
+
+.environments {
+    grid-column: col 3 / span 1;
+    grid-row: row 1;
+    text-align: center;
+}
+
+.areasOfInterest {
+    grid-column: col 4 / span 1;
+    grid-row: row 1;
+    text-align: center;
+}
+
+
 .wrapper {
     /* width: 100%; */
     z-index: 3;
@@ -161,14 +198,14 @@ img.profile-photo {
 } */
 
 .g {
-    grid-column: col;
+    grid-column: col / span 5;
     grid-row: row 4;
 }
 
-.h {
+/* .h {
     grid-column: col 2 / span 4;
     grid-row: row 4;
-}
+} */
 
 /* Default Text Colors */
 h1, h2, h3, h4, h5, h6 {
