--- a/public/style.css
+++ b/public/style.css
@@ -248,3 +248,12 @@ h1, h2, h3, h4, h5, h6 {
     display: inline-block;
     text-align: left;
 }
+
+.wt-filler {
+    background-color: #e9ecef;
+    padding: 10px;
+}
+
+.wt-filler p {
+    margin: 5px;
+}
